--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.2",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.378.0",
     "next": "^15.1.0",
     "payload": "latest",
