--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.378.0",
     "next": "^15.1.0",
     "next-sitemap": "^4.2.3",
@@ -48,6 +50,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "7.45.4",
+    "react-leaflet": "^5.0.0",
     "sharp": "0.32.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
@@ -59,6 +62,7 @@
     "@types/node": "22.5.4",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
+    "@types/react-leaflet": "^3.0.0",
     "autoprefixer": "^10.4.19",
     "copyfiles": "^2.4.1",
     "eslint": "^9.16.0",
@@ -70,5 +74,10 @@
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
