chore(db): change db url

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database connection string
-DATABASE_URI=mongodb+srv://dev-kn-dambo:F91TicBoVVwgB5w4@kn-dambo-cluster.x8y48b1.mongodb.net/kn-bdms
+DATABASE_URI=mongodb+srv://dev-kn-dambo:F91TicBoVVwgB5w4@kn-dambo-cluster.x8y48b1.mongodb.net/kn-unlag-intern
 
 # Or use a PG connection string
 #DATABASE_URI=postgresql://127.0.0.1:5432/your-database-name
