--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@payloadcms/db-mongodb": "latest",
     "@payloadcms/next": "latest",
     "@payloadcms/richtext-lexical": "^3.17.1",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.2.2",
@@ -28,6 +30,7 @@
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
     "input-otp": "^1.4.2",
