chore: install necessary packages for integration

--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "dependencies": {
     "@payloadcms/db-mongodb": "latest",
     "@payloadcms/next": "latest",
-    "@payloadcms/richtext-lexical": "^3.17.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-form": "^0.41.3",
+    "@tanstack/react-query": "^5.64.2",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -33,6 +36,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.378.0",
     "next": "^15.1.0",
+    "otp-generator": "^4.0.1",
     "payload": "latest",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -46,6 +50,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/eslint-plugin-query": "^5.64.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/escape-html": "^1.0.2",
     "@types/node": "22.5.4",
     "@types/react": "19.0.1",
