feat: add otp for password reset for students

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,7 @@ DATABASE_URI=mongodb+srv://dev:emxvGbDyTfxFgyy5@cluster0.ocq93.mongodb.net/?retr
 # Used to encrypt JWT tokens
 PAYLOAD_SECRET=YOUR_SECRET_HERE
 
+BCRYPT_SALT=4
+
 # Used to configure CORS, format links and more. No trailing slash
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
