--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.1",
+    "@mui/x-date-pickers": "^7.24.1",
     "@payloadcms/db-mongodb": "latest",
     "@payloadcms/next": "latest",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-form": "^0.41.3",
     "@tanstack/react-query": "^5.64.2",
@@ -36,13 +41,16 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.378.0",
     "next": "^15.1.0",
+    "next-themes": "^0.4.4",
     "otp-generator": "^4.0.1",
     "payload": "latest",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "7.45.4",
     "react-leaflet": "^5.0.0",
     "sharp": "0.32.6",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
