--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "graphql": "^16.8.2",
     "lucide-react": "^0.378.0",
     "next": "^15.1.0",
