--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@payloadcms/richtext-lexical": "^3.17.1",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-form": "^0.41.3",
     "@tanstack/react-query": "^5.64.2",
@@ -46,6 +46,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.378.0",
     "next": "^15.1.0",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "otp-generator": "^4.0.1",
     "payload": "latest",
