--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@mui/material": "^6.4.1",
     "@mui/x-date-pickers": "^7.24.1",
     "@payloadcms/db-mongodb": "latest",
-    "@payloadcms/email-nodemailer": "^3.20.0",
+    "@payloadcms/email-nodemailer": "latest",
     "@payloadcms/next": "latest",
     "@payloadcms/richtext-lexical": "^3.17.1",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -34,6 +34,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-form": "^0.41.3",
     "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-store": "^0.7.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -47,7 +48,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.378.0",
     "next": "^15.1.0",
-    "next-auth": "^4.24.11",
+    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "otp-generator": "^4.0.1",
     "payload": "latest",
