--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "7.45.4",
     "react-leaflet": "^5.0.0",
     "sharp": "0.32.6",
