--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tanstack/react-form": "^0.41.3",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-store": "^0.7.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
