--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "next": "^15.1.0",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "otp-generator": "^4.0.1",
     "payload": "latest",
     "react": "^19.0.0",
