--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "graphql": "^16.8.2",
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-geosearch": "^4.2.0",
     "lucide-react": "^0.378.0",
     "next": "^15.1.0",
     "next-auth": "5.0.0-beta.25",
@@ -57,7 +59,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "7.45.4",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "5.0.0-rc.2",
     "sharp": "0.32.6",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.3.0",
@@ -70,6 +72,7 @@
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/escape-html": "^1.0.2",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "22.5.4",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
