--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-themes": "^0.4.4",
     "otp-generator": "^4.0.1",
     "payload": "latest",
+    "qs-esm": "^7.0.2",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
