--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@payloadcms/next": "latest",
     "@payloadcms/richtext-lexical": "^3.17.1",
     "@radix-ui/react-alert-dialog": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -40,21 +39,20 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@tanstack/react-table": "^8.20.6",
     "@tanstack/react-form": "^0.41.3",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-store": "^0.7.0",
+    "@tanstack/react-table": "^8.20.6",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
-    "geist": "^1.3.0",
     "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.5.2",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "geist": "^1.3.0",
     "graphql": "^16.8.2",
     "input-otp": "^1.4.2",
     "leaflet": "^1.9.4",
@@ -66,7 +64,7 @@
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "otp-generator": "^4.0.1",
-    "payload": "latest",
+    "payload": "^3.14.0",
     "qs-esm": "^7.0.2",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
@@ -74,10 +72,10 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "7.45.4",
     "react-leaflet": "5.0.0-rc.2",
-    "sharp": "0.32.6",
-    "sonner": "^1.7.2",
     "recharts": "^2.15.0",
     "shadcn-ui": "^0.9.4",
+    "sharp": "0.32.6",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
