--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.1",
+    "@mui/material": "^6.4.4",
     "@mui/x-date-pickers": "^7.24.1",
     "@payloadcms/db-mongodb": "latest",
     "@payloadcms/email-nodemailer": "latest",
@@ -60,6 +60,7 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geosearch": "^4.2.0",
     "lucide-react": "^0.378.0",
+    "mui": "^0.0.1",
     "next": "^15.1.0",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -73,6 +74,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "7.45.4",
     "react-leaflet": "5.0.0-rc.2",
+    "react-select": "^5.10.0",
     "recharts": "^2.15.0",
     "shadcn-ui": "^0.9.4",
     "sharp": "0.32.6",
