chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,10 @@ NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 
 NEXTAUTH_SECRET=PwEAUj14krynCr69JetVnFZfP9pXiWk/DpZLzzozt2o=
 
-GMAIL_USER=dev.koonage@gmail.com
-GMAIL_PASSWORD=wovp xabs kxtd vlvj
+EMAIL_USER=no-reply@emails.koonage.com
+RESEND_API_KEY=re_Pavo4e4E_DBhedivdLgwX1C4C2cN5EnQ8
+
+S3_BUCKET=unilag-app-storage
+S3_ACCESS_KEY_ID=AKIAXAGS6K7WS3X77AEI
+S3_SECRET_ACCESS_KEY=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
+S3_REGION=eu-west-3
