--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^4.1.3",
     "@mui/material": "^6.4.7",
     "@mui/x-date-pickers": "^7.27.3",
     "@payloadcms/db-mongodb": "3.28.1",
