--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ DATABASE_URI=mongodb+srv://dev:emxvGbDyTfxFgyy5@cluster0.ocq93.mongodb.net/?retr
 #DATABASE_URI=postgresql://127.0.0.1:5432/your-database-name
 
 # Used to encrypt JWT tokens
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+PAYLOAD_SECRET= KwEAUj14krynCr69JetVnFZfP9pXiWk
 
 BCRYPT_SALT=4
 
