chore(config): updated example env vars

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,33 @@
 # Database connection string
 DATABASE_URI=mongodb+srv://dev:emxvGbDyTfxFgyy5@cluster0.ocq93.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# DATABASE_URI=mongodb://127.0.0.1:27017/newdb
 
 # Or use a PG connection string
-#DATABASE_URI=postgresql://127.0.0.1:5432/your-database-name
+# DATABASE_URI=postgresql://127.0.0.1:5432/your-database-name
 
 # Used to encrypt JWT tokens
-PAYLOAD_SECRET= KwEAUj14krynCr69JetVnFZfP9pXiWk
-
-BCRYPT_SALT=4
+PAYLOAD_SECRET=YOUR_SECRET_HERE
 
 # Used to configure CORS, format links and more. No trailing slash
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 
-NEXTAUTH_SECRET=PwEAUj14krynCr69JetVnFZfP9pXiWk/DpZLzzozt2o=
+# EMAIL_USER=no-reply@koonage.com
+# EMAIL_PASSWORD=<i\ZTi;D ih.8_-
 
-GMAIL_USER=dev.koonage@gmail.com
-GMAIL_PASSWORD=wovp xabs kxtd vlvj
+EMAIL_USER=no-reply@emails.koonage.com
+RESEND_API_KEY=re_Pavo4e4E_DBhedivdLgwX1C4C2cN5EnQ8
+
+NEXTAUTH_SECRET=PwEAUj14krynCr69JetVnFZfP9pXiWk/DpZLzzozt2o=
+AUTH_URL=http://localhost:3000/api/auth
+NEXTAUTH_URL=http://localhost:3000/api/auth
+AUTH_TRUST_HOST=true
+
+S3_BUCKET=unilag-app-storage
+S3_ACCESS_KEY_ID=AKIAXAGS6K7WS3X77AEI
+S3_SECRET_ACCESS_KEY=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
+S3_REGION=eu-west-3
+
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDO9x98EMNhdAvNQOj_QlI1DyPWSjJI9VE
+
+PAYSTACK_PUB_KEY=pk_test_efb908884f29acb7f7cb0fbd8afb7434e3d02e88
+PAYSTACK_SEC_KEY=sk_test_9be6a753abfe8d3570e9a5f6b0ac8369734720bf
