--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-google-maps/api": "^2.20.6",
     "@tanstack/react-form": "^0.41.4",
     "@tanstack/react-query": "^5.67.3",
     "@tanstack/react-store": "^0.7.0",
