--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "otp-generator": "^4.0.1",
+    "papaparse": "^5.5.2",
     "payload": "^3.28.1",
     "qs-esm": "^7.0.2",
     "react": "^19.0.0",
@@ -83,6 +84,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
