update on on-prem git action

--- a/.github/workflows/on-prem.yaml
+++ b/.github/workflows/on-prem.yaml
@@ -20,8 +20,8 @@ jobs:
           echo "${{ secrets.ENV_FILE }}" > .env
       - name: Build and Push Image
         run: |
-          docker build -t ${{ secrets.ACR_REGISTRY }}/merchant-fe:${{ github.sha }} .
-          docker push ${{ secrets.ACR_REGISTRY }}/merchant-fe:${{ github.sha }}
+          docker build -t ${{ secrets.ACR_REGISTRY }}/unilag-intern:${{ github.sha }} .
+          docker push ${{ secrets.ACR_REGISTRY }}/unilag-intern:${{ github.sha }}
 
   update-helm:
     runs-on: ubuntu-latest
