--- a/.github/workflows/on-prem.yaml
+++ b/.github/workflows/on-prem.yaml
@@ -20,10 +20,23 @@ jobs:
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
 
-      - name: Build and Push Image with Build Args
+      - name: Build and Push Image
         run: |
           docker build \
+            --build-arg AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }} \
+            --build-arg AUTH_URL=${{ secrets.AUTH_URL }} \
+            --build-arg DATABASE_URI=${{ secrets.DATABASE_URI }} \
+            --build-arg EMAIL_USER=${{ secrets.EMAIL_USER }} \
+            --build-arg NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }} \
+            --build-arg NEXTAUTH_URL=${{ secrets.NEXTAUTH_URL }} \
             --build-arg NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${{ secrets.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY }} \
+            --build-arg NEXT_PUBLIC_SERVER_URL=${{ secrets.NEXT_PUBLIC_SERVER_URL }} \
+            --build-arg PAYLOAD_SECRET=${{ secrets.PAYLOAD_SECRET }} \
+            --build-arg RESEND_API_KEY=${{ secrets.RESEND_API_KEY }} \
+            --build-arg S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }} \
+            --build-arg S3_BUCKET=${{ secrets.S3_BUCKET }} \
+            --build-arg S3_REGION=${{ secrets.S3_REGION }} \
+            --build-arg S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }} \
             -t ${{ secrets.ACR_REGISTRY }}/unilag-intern:${{ github.sha }} .
           docker push ${{ secrets.ACR_REGISTRY }}/unilag-intern:${{ github.sha }}
 
