--- a/.github/workflows/on-prem.yaml
+++ b/.github/workflows/on-prem.yaml
@@ -1,5 +1,4 @@
 name: build_deploy_aks
-
 on:
   push:
     branches:
@@ -15,14 +14,14 @@ jobs:
       - name: Log in to ACR
         run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.ACR_REGISTRY }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
-          
+
       - name: Create .env file from secret
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
 
       - name: Build and Push Image
         run: |
-          docker build \
+          docker buildx build \
             --build-arg AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }} \
             --build-arg AUTH_URL=${{ secrets.AUTH_URL }} \
             --build-arg DATABASE_URI=${{ secrets.DATABASE_URI }} \
