--- a/.github/workflows/on-prem.yaml
+++ b/.github/workflows/on-prem.yaml
@@ -1,4 +1,5 @@
 name: build_deploy_aks
+
 on:
   push:
     branches:
@@ -14,12 +15,12 @@ jobs:
       - name: Log in to ACR
         run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.ACR_REGISTRY }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
-
+          
       - name: Create .env file from secret
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
 
-      - name: Build and Push Image
+      - name: Build and Push Image with Build Args
         run: |
           docker build \
             --build-arg AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }} \
@@ -38,6 +39,7 @@ jobs:
             --build-arg S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }} \
             -t ${{ secrets.ACR_REGISTRY }}/unilag-intern:${{ github.sha }} .
           docker push ${{ secrets.ACR_REGISTRY }}/unilag-intern:${{ github.sha }}
+
 
   update-helm:
     runs-on: ubuntu-latest
