feat: completed integration of payment and application limiting

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,5 @@ NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDO9x98EMNhdAvNQOj_QlI1DyPWSjJI9VE
 
 PAYSTACK_PUB_KEY=pk_test_efb908884f29acb7f7cb0fbd8afb7434e3d02e88
 PAYSTACK_SEC_KEY=sk_test_9be6a753abfe8d3570e9a5f6b0ac8369734720bf
+
+NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY=pk_test_efb908884f29acb7f7cb0fbd8afb7434e3d02e88
