--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@payloadcms/next": "3.28.1",
     "@payloadcms/richtext-lexical": "3.28.1",
     "@payloadcms/storage-s3": "3.28.1",
+    "@paystack/inline-js": "^2.22.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -63,6 +64,7 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geosearch": "^4.2.0",
     "lucide-react": "^0.378.0",
+    "mongodb": "^6.16.0",
     "mui": "^0.0.1",
     "next": "^15.2.2",
     "next-auth": "5.0.0-beta.25",
@@ -96,6 +98,7 @@
     "@types/escape-html": "^1.0.4",
     "@types/leaflet": "^1.9.16",
     "@types/node": "22.5.4",
+    "@types/paystack__inline-js": "^1.0.1",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
     "@types/react-leaflet": "^3.0.0",
