--- a/amplify.yml
+++ b/amplify.yml
@@ -7,7 +7,7 @@ frontend:
         - pnpm install --frozen-lockfile
     build:
       commands:
-        - env | grep -e PAYLOAD_SECRET -e DATABASE_URI -e S3_BUCKET -e S3_REGION -e S3_ACCESS_KEY_ID -e S3_SECRET_ACCESS_KEY -e AUTH_TRUST_HOST -e AUTH_URL -e EMAIL_USER -e NEXTAUTH_SECRET -e NEXTAUTH_URL -e NEXT_PUBLIC_GOOGLE_MAPS_API_KEY -e NEXT_PUBLIC_SERVER_URL -e RESEND_API_KEY >> .env.production
+        - env | grep -e PAYLOAD_SECRET -e DATABASE_URI -e S3_BUCKET -e S3_REGION -e S3_ACCESS_KEY_ID -e S3_SECRET_ACCESS_KEY -e AUTH_TRUST_HOST -e AUTH_URL -e EMAIL_USER -e NEXTAUTH_SECRET -e NEXTAUTH_URL -e NEXT_PUBLIC_GOOGLE_MAPS_API_KEY -e NEXT_PUBLIC_SERVER_URL -e RESEND_API_KEY -e NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY -e NEXT_TELEMETRY_DISABLED -e PAYSTACK_SECRET_KEY >> .env.production
         - pnpm run build
         - rm -f node_modules/@swc/core-linux-x64-gnu/swc.linux-x64-gnu.node
         - rm -f node_modules/@swc/core-linux-x64-musl/swc.linux-x64-musl.node
