--- a/.github/workflows/on-prem.yaml
+++ b/.github/workflows/on-prem.yaml
@@ -49,4 +49,4 @@ jobs:
           git config --global user.email "$GIT_COMMITTER_EMAIL"
           git add unilag-intern/values.yaml
           git commit -m "Update unilag-intern image tag to ${{ github.sha }}" || echo "No changes to commit"
-          git push origin main || echo "No changes to push"
+          git push origin master || echo "No changes to push"
